--- a/clase5/tarea5_4.html
+++ b/clase5/tarea5_4.html
@@ -5,15 +5,30 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Clase 5</title>
+    <title>Clase 5_4</title>
 </head>
 <body>
     <form>
-        <input type="number" placeholder="Ingresa salario anual" id="salarioAnual"/>
-        <input type="submit" value="calcular" id="calcular"/>
+        <ol id="lista">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li>8</li>
+            <li>9</li>
+            <li>10</li>
+        </ol>
     </form>
 
-    <input type="text" disabled id="salario-mensual"/>
-    <script src='tarea5.js'></script>
+    <div>
+        <em id="promedio"></em><br>
+        <em id="numeroMasChico"></em><br>
+        <em id="numeroMasGrande"></em><br>
+        <em id="numeroMasFrecuente"></em>
+    </div>
+    <script src='tarea5_4.js'></script>
 </body>
 </html>
