Agrego Solucion de tarea 5 hecha por fabricio

--- a/clase5/tarea5.html
+++ b/clase5/tarea5.html
@@ -20,3 +20,13 @@
 
 
 
+<!-- Solucion de fabricio
+ <form>
+    <label>Salario anual</label>
+    <input type="text" id="Salario-anual"/>
+    <label>Salario Mensual</label>
+    <input type="text" disabled id="salario-mensual"/>
+    <button id="calcular-salario-mensual">Calcular</button>
+    <button type='reset'>limpar</button> otra forma <input type="reset" value="Limpar"/>
+</form> 
+-->
