agrego calculos, para establecer edad menor, mayor y promedio. no funciona aun

--- a/clase6/tarea6.html
+++ b/clase6/tarea6.html
@@ -16,11 +16,13 @@
         <label for="personasFamilia">Número de integrantes en la familia:</label>
         <input type="number" id="personasFamilia">
         <button id="entrada">Agregar Integrantes</button>
+        <button id="calcular">calcular</button>
         <button type="button" id="reset">Resetear</button>
     </form>
     <div id="personas"></div>
     <div id="resultados" class="oculto">
         <h3>Resultados</h3>
+        <p>Mayor edad registrada: <span id="mayorEdad"></span></p>
         <p>Menor edad registrada: <span id="menorEdad"></span></p>
         <p>Promedio de edades: <span id="promedioEdades"></span></p>
     </div>
