modifique los botones, me daba problemas la carga de pagina, los converti a class button en el html y algo de limpieza del codigo JS

--- a/clase6/tarea6.html
+++ b/clase6/tarea6.html
@@ -15,8 +15,8 @@
     <form id="formulario">
         <label for="personasFamilia">Número de integrantes en la familia:</label>
         <input type="number" id="personasFamilia">
-        <button id="entrada">Agregar Integrantes</button>
-        <button id="calcular">calcular</button>
+        <button type="button" id="entrada">Agregar Integrantes</button>
+        <button type="button" id="calcular" class="oculto">calcular</button>
         <button type="button" id="reset">Resetear</button>
     </form>
     <div id="personas"></div>
