agregue en html el codigo faltante para salarios y corregi errores en JS que hacian que el codigo diera error

--- a/clase6/tarea6.html
+++ b/clase6/tarea6.html
@@ -25,6 +25,11 @@
         <p>Mayor edad registrada: <span id="mayorEdad"></span></p>
         <p>Menor edad registrada: <span id="menorEdad"></span></p>
         <p>Promedio de edades: <span id="promedioEdades"></span></p>
+        <br>
+        <p>Mayor salario registrado: <span id="mayorSalario"></span></p>
+        <p>Menor salario registrado: <span id="menorSalario"></span></p>
+        <p>Promedio de salarios: <span id="promedioSalario"></span></p>
+        <p>Salario mensual promedio: <span id="salarioMensualPromedio"></span></p>
     </div>
 
     <script src="tarea6.js"></script>
